src/objects/MMCONT_RELATIONS__c.object
<CustomObject>
    <description>(MBI) - MMD - Contact Other Firm Relationships</description>
    <fields>
        <fullName>CONTID__c</fullName>
        <label>Contact MMD ID</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <label>Contact Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>MMD Relations</relationshipLabel>
        <relationshipName>MMD_Contact_Relations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ID__c</fullName>
        <label>Firm MMD ID</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>REL_CONAME__c</fullName>
        <label>Related Firm Name</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>REL_PID__c</fullName>
        <label>Related Firm MMD ID</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Firm_Link__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Firm Link</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>MMD Contact Relations</relationshipLabel>
        <relationshipName>MMD_Contact_Relations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TITLE__c</fullName>
        <label>Title</label>
        <length>140</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>YEAR_HIRED__c</fullName>
        <label>Year Hired</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>YEAR_LEFT__c</fullName>
        <label>Year Left</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <label>MMD Contact Relation</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Link</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MMD Contact Relations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>